changed application properties and added test model

--- a/ecommerce_product_api_service/src/main/resources/application.properties
+++ b/ecommerce_product_api_service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8080
+server.error.include-stacktrace=never
 
+# FakeStoreApi Config
+fakeStore.api.url=https://fakestoreapi.com
+fakeStore.api.path.products=/products
+
+# Spring Config
+spring.profiles.active=dev
